# loom

./: .env.example  .gitignore  PRD_workflow_platform.md  README.md  pyproject.toml
.claude/: settings.json
backend/: .env.example  config.py  database.py  dependencies.py  exceptions.py  main.py  requirements.txt
backend/app/: auth.py  config.py  crypto.py  database.py  main.py  models.py
backend/app/engine/: executor.py  (+2 more)
backend/models/: __init__.py  ad_campaign.py  credential.py  datatable.py  execution.py  niche.py  page.py  page_meta.py  seeded_template.py  step.py  workflow.py
backend/routers/: ads.py  assets.py  auth.py  credentials.py  dashboard.py  datatables.py  executions.py  health.py  niches.py  pages.py  steps.py  triggers.py  workflows.py
backend/schemas/: ad_campaign.py  asset.py  credential.py  datatable.py  execution.py  niche.py  page.py  step.py  workflow.py
backend/services/: ads_service.py  asset_service.py  credential_service.py  git_service.py  json_sync.py  notification_service.py  scheduler_service.py  template_engine.py  template_seeder.py  workflow_engine.py
deploy/: .env.example  SETUP.md  deploy.sh  loom-webhook.service  loom.service  nginx-loom.conf  webhook.py
frontend/: index.html
frontend/css/: app.css
frontend/js/: ads.js  api.js  app.js  dashboard.js
scripts/: create_workflows.py  fix_llm_providers.py  generate_fernet_key.py  init_db.py
skills/: README.md  page-scheduler.md  run-ads.md  workflow-duplication.md
templates/: README.md  image-workflow-template.json  import_template.py  video-workflow-template.json
(+26 files in other folders)
