[project]
name = "loom"
version = "1.0.0"
description = "Workflow automation platform for Facebook content generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.scripts]
loom = "backend.main:run"
